test/sematest/invalid/missing_args.java
class Test {
  public static void main(String[] args) {}
  public int test(int i, int j) {
    test ( ) ;
  }
}
